DB schema creation completed for User, Topics and User_Topics.

--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ export DB_USERNAME=venkatesh
 export DB_PASSWORD=venkatesh@123
 export DB_NAME=know_your_customer_dev
 export DB_HOSTNAME=localhost
+
+
+export TEST_DB_USERNAME=venkatesh
+export TEST_DB_PASSWORD=venkatesh@123
+export TEST_DB_NAME=know_your_customer_test
+export TEST_DB_HOSTNAME=localhost
